# reflective-research-agent

./: .env.example  .gitignore  CREDENTIALS.md  README.md  pyproject.toml  requirements-full.txt  requirements.txt
src/reflective_research/: __init__.py  __main__.py  cli.py  logging_config.py  service.py  stack.py
src/reflective_research/api/: __init__.py  app.py  schemas.py
src/reflective_research/config/: __init__.py  settings.py
src/reflective_research/domain/: __init__.py  models.py  state.py
src/reflective_research/graph/: __init__.py  builder.py  citations.py  nodes.py  prompts.py
src/reflective_research/llm/: __init__.py  dependencies_health.py  factory.py  ollama_health.py
src/reflective_research/retrieval/: __init__.py  chroma_store.py
src/reflective_research/tools/: __init__.py  evidence_quality.py  url_fetch.py  web_search.py
tests/: test_api_evidence.py  test_citations.py  test_evidence_quality_hosts.py  test_relevance.py  test_rerank.py  test_route.py  test_search_filters.py  test_usable_evidence.py  test_verification_flow.py  test_web_search.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: MarkdownBody.tsx  MermaidBlock.tsx  ProgressStrip.tsx
web/src/lib/: apiBase.ts  contextualQuery.ts  evidence.ts  health.ts  stream.ts  suggestions.ts
